# internal/handlers/httphandler/handlers.go
@@ -1,7 +1,9 @@
 package httphandler
 
 import (
+	"encoding/json"
 	"errors"
+	"io"
 	"net/http"
 	"strconv"
 
@@ -50,6 +52,7 @@ func (h HTTPHandler) GetUserHandler(c echo.Context) error {
 	user, err := h.cr.GetUserByID(userID)
 	if err != nil {
 		errlog.Error(err, "HTTPHandler.GetUserHandler")
+
 		switch {
 		case errors.Is(err, entities.ErrNonexistingUser):
 			return errorResponse(c, http.StatusNotFound, err, entities.ErrNonexistingUser.Error())
@@ -85,7 +88,8 @@ func (h HTTPHandler) ListUserHandler(c echo.Context) error {
 
 	users, totalCount, err := h.cr.ListUser(userFilter, pageSize, pageNumber)
 	if err != nil {
-		errlog.Error(err, "")
+		errlog.Error(err, "HTTPHandler.ListUserHandler")
+
 		switch {
 		case errors.Is(err, entities.ErrListUser):
 			return errorResponse(c, http.StatusFailedDependency, err, entities.ErrListUser.Error())
@@ -105,4 +109,60 @@ func (h HTTPHandler) ListUserHandler(c echo.Context) error {
 	c.Response().Header().Set("X-Total-Count", strconv.FormatInt(totalCount, 10))
 	c.Response().Header().Set("X-Result-Count", strconv.FormatInt(int64(len(users)), 10))
 	return c.JSON(http.StatusOK, resps)
+}
+
+// CreateUser godoc
+// @Summary creates user
+// @Description creates user
+// @ID create-user
+// @Consume	json
+// @Produce	json
+// @Param			payload			body			entities.CreateUserReq	true		"Payload"
+// @Success			201 			{object}		entities.UserResp					"User details"
+// @Failure			400				{object}		entities.ErrResp					"Bad request"
+// @Failure			409				{object}		entities.ErrResp					"Existing email"
+// @Failure			424				{object}		entities.ErrResp					"Database or Kafka Error"
+// @Failure			500				{object}		entities.ErrResp					"Internal server error"
+// @Router /users [put]
+func (h HTTPHandler) CreateUserHandler(c echo.Context) error {
+	req := entities.CreateUserReq{}
+	body, err := io.ReadAll(c.Request().Body)
+	if err != nil {
+		return errorResponse(c, http.StatusInternalServerError, err, "")
+	}
+
+	err = json.Unmarshal(body, &req)
+	if err != nil {
+		return errorResponse(c, http.StatusBadRequest, err, "")
+	}
+
+	if err := h.validateCreateUser(req); err != nil {
+		return errorResponse(c, http.StatusBadRequest, err, "")
+	}
+
+	resp, err := h.cr.CreateUser(req)
+	if err != nil {
+		errlog.Error(err, "HTTPHandler.CreateUserHandler")
+
+		switch {
+		case errors.Is(err, entities.ErrBadEmail):
+			return errorResponse(c, http.StatusBadRequest, err, entities.ErrBadEmail.Error())
+		case errors.Is(err, entities.ErrEmptyName):
+			return errorResponse(c, http.StatusBadRequest, err, entities.ErrEmptyName.Error())
+		case errors.Is(err, entities.ErrBadHashedPswd):
+			return errorResponse(c, http.StatusBadRequest, err, entities.ErrBadHashedPswd.Error())
+		case errors.Is(err, entities.ErrCountryLength):
+			return errorResponse(c, http.StatusBadRequest, err, entities.ErrCountryLength.Error())
+		case errors.Is(err, entities.ErrExistingEmail):
+			return errorResponse(c, http.StatusConflict, err, entities.ErrExistingEmail.Error())
+		case errors.Is(err, entities.ErrInsertUser):
+			return errorResponse(c, http.StatusFailedDependency, err, entities.ErrInsertUser.Error())
+		case errors.Is(err, entities.ErrKafkaProduce):
+			return errorResponse(c, http.StatusFailedDependency, err, entities.ErrKafkaProduce.Error())
+		}
+
+		return errorResponse(c, http.StatusInternalServerError, err, "")
+	}
+
+	return c.JSON(http.StatusCreated, resp)
 }
